--- a/Pages/FAQs.html
+++ b/Pages/FAQs.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Mamtos International Limited/FAQs</title>
     <link rel="stylesheet" href="../Css/FAQs.css">
+    <link rel="stylesheet" href="../Css/Accordion.css">
 </head>
 <body>
     <section>
@@ -48,54 +49,84 @@
             <div>
                 <h1>Frequently Asked Questions</h1>
             </div>
-            <div class="plus-1">
-                <div class="plus">
+            <div class="accordion">
+                <div class="accordion-item">
+                  <div class="accordion-header">
                     <div>
-                        <p>How does contract & supply work in your company</p>
+                        <h2>how does contract & supply work in your company</h2>
                     </div>
                     <div>
-                        <img src="../Images/+.png" alt="">
+                        +
                     </div>
+                  </div>
+                  <div class="accordion-content">
+                    <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Optio, impedit!</p>
+                  </div>
                 </div>
-                <div class="plus">
+                <div class="accordion-item">
+                  <div class="accordion-header">
                     <div>
-                        <p>How does contract & supply work in your company</p>
+                        <h2>how does contract & supply work in your company</h2>
                     </div>
                     <div>
-                        <img src="../Images/+.png" alt="">
+                        +
                     </div>
+                  </div>
+                  <div class="accordion-content">
+                    <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Optio, impedit!</p>
+                  </div>
                 </div>
-                <div class="plus">
+                <div class="accordion-item">
+                  <div class="accordion-header">
                     <div>
-                        <p>How does contract & supply work in your company</p>
+                        <h2>how does contract & supply work in your company</h2>
                     </div>
                     <div>
-                        <img src="../Images/+.png" alt="">
+                        +
                     </div>
+                  </div>
+                  <div class="accordion-content">
+                    <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Optio, impedit!</p>
+                  </div>
                 </div>
-                <div class="plus">
+                <div class="accordion-item">
+                  <div class="accordion-header">
                     <div>
-                        <p>How does contract & supply work in your company</p>
+                        <h2>how does contract & supply work in your company</h2>
                     </div>
                     <div>
-                        <img src="../Images/+.png" alt="">
+                        +
                     </div>
+                  </div>
+                  <div class="accordion-content">
+                    <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Optio, impedit!</p>
+                  </div>
                 </div>
-                <div class="plus">
+                <div class="accordion-item">
+                  <div class="accordion-header">
                     <div>
-                        <p>How does contract & supply work in your company</p>
+                        <h2>how does contract & supply work in your company</h2>
                     </div>
                     <div>
-                        <img src="../Images/+.png" alt="">
+                        +
                     </div>
+                  </div>
+                  <div class="accordion-content">
+                    <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Optio, impedit!</p>
+                  </div>
                 </div>
-                <div class="plus">
+                <div class="accordion-item">
+                  <div class="accordion-header">
                     <div>
-                        <p>How does contract & supply work in your company</p>
+                        <h2>how does contract & supply work in your company</h2>
                     </div>
                     <div>
-                        <img src="../Images/+.png" alt="">
+                        +
                     </div>
+                  </div>
+                  <div class="accordion-content">
+                    <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Optio, impedit!</p>
+                  </div>
                 </div>
             </div>
         </div>
@@ -145,5 +176,6 @@
         </div>
     </footer>
     <script src="../Js/main.js"></script>
+    <script src="../Js/Accordion.js"></script>
 </body>
 </html>
