--- a/Pages/FAQs.html
+++ b/Pages/FAQs.html
@@ -56,7 +56,7 @@
                         <h2>how does contract & supply work in your company</h2>
                     </div>
                     <div>
-                        +
+                        <span class="icon"></span>
                     </div>
                   </div>
                   <div class="accordion-content">
@@ -69,7 +69,7 @@
                         <h2>how does contract & supply work in your company</h2>
                     </div>
                     <div>
-                        +
+                        <span class="icon"></span>
                     </div>
                   </div>
                   <div class="accordion-content">
@@ -82,7 +82,7 @@
                         <h2>how does contract & supply work in your company</h2>
                     </div>
                     <div>
-                        +
+                        <span class="icon"></span>
                     </div>
                   </div>
                   <div class="accordion-content">
@@ -95,7 +95,7 @@
                         <h2>how does contract & supply work in your company</h2>
                     </div>
                     <div>
-                        +
+                        <span class="icon"></span>
                     </div>
                   </div>
                   <div class="accordion-content">
@@ -108,7 +108,7 @@
                         <h2>how does contract & supply work in your company</h2>
                     </div>
                     <div>
-                        +
+                        <span class="icon"></span>
                     </div>
                   </div>
                   <div class="accordion-content">
@@ -121,7 +121,7 @@
                         <h2>how does contract & supply work in your company</h2>
                     </div>
                     <div>
-                        +
+                        <span class="icon"></span>
                     </div>
                   </div>
                   <div class="accordion-content">
