updating the index features

--- a/index.html
+++ b/index.html
@@ -5,23 +5,23 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Mamtos International Limited</title>
-    <link rel="stylesheet" href="../Css/style.css">
+    <link rel="stylesheet" href="./Css/style.css">
 </head>
 
 <body>
     <section>
         <nav>
             <div class="logo">
-                <img src="../Images/Vector.jpg" alt="">
+                <img src="./Images/Vector.jpg" alt="">
                 <h2>Mamtos <br>International Limited</h2>
             </div>
             <div class="log">
                 <ul>
-                    <a href="./Home.html"><li>Home</li></a>
-                    <a href="./Consultancy.html"><li>Consultancy</li></a>
-                    <a href="./Contract.html"><li>Contract and Supply</li></a>
-                    <a href="./Insurance.html"><li>Insurance</li></a>
-                    <a href="./About.html"><li>About</li></a>
+                    <a href="/Matmos/index.html"><li>Home</li></a>
+                    <a href="./Pages/Consultancy.html"><li>Consultancy</li></a>
+                    <a href="./Pages/Contract.html"><li>Contract and Supply</li></a>
+                    <a href="./Pages/Insurance.html"><li>Insurance</li></a>
+                    <a href="./Pages/About.html"><li>About</li></a>
                 </ul>
                 <div class="toggle">
                     <button>=</button>
@@ -30,11 +30,11 @@
         </nav>
         <div class="mobile-nav">
             <ul>
-                <a href="./Home.html"><li>Home</li></a>
-                <a href="./Consultancy.html"><li>Consultancy</li></a>
-                <a href="./Contract.html"><li>Contract and Supply</li></a>
-                <a href="./Insurance.html"><li>Insurance</li></a>
-                <a href="./About.html"><li>About</li></a>
+                <a href="./index.html"><li>Home</li></a>
+                <a href="./Pages/Consultancy.html"><li>Consultancy</li></a>
+                <a href="./Pages/Contract.html"><li>Contract and Supply</li></a>
+                <a href="./Pages/Insurance.html"><li>Insurance</li></a>
+                <a href="./Pages/About.html"><li>About</li></a>
             </ul>
         </div>
         <div>
@@ -46,7 +46,7 @@
                 <div>
                     <p>Matmos International Limited is a Private Company that engage in</p>
                     <p>training for hospital, private and government institutions through </p>
-                    <p>Information 7and communication  technology</p>
+                    <p>Information and communication  technology</p>
                 </div>
                 <div class="btn">
                     <div><input type="text" placeholder="Search plans"></div>
@@ -57,7 +57,7 @@
         <div class="center">
             <div class="center-1">
                 <div>
-                    <img src="../Images/Rectangle 47.png" alt="">
+                    <img src="./Images/Rectangle 47.png" alt="">
                 </div>
                 <div class="about-items">
                     <h2>About</h2>
@@ -77,7 +77,7 @@
                 <div class="service">
                     <div class="serve">
                         <div>
-                            <img src="../Images/Group 223.png" alt="">
+                            <img src="./Images/Group 223.png" alt="">
                         </div>
                         <div class="serve-1">
                             <h2>General Contracts and Supplies</h2>
@@ -91,7 +91,7 @@
                     </div>
                     <div class="serve">
                         <div>
-                            <img src="../Images/Group 225.png" alt="">
+                            <img src="./Images/Group 225.png" alt="">
                         </div>
                         <div class="serve-1">
                             <h2>Consultancy Service</h2>
@@ -106,7 +106,7 @@
                     </div>
                     <div class="serve">
                         <div>
-                            <img src="../Images/Group 224.png" alt="">
+                            <img src="./Images/Group 224.png" alt="">
                         </div>
                         <div class="serve-1">
                             <h2>Insurance Registration</h2>
@@ -127,7 +127,7 @@
                 </div>
                 <div class="reserve">
                     <div>
-                        <img src="../Images/Rectangle 57.png" alt="">
+                        <img src="./Images/Rectangle 57.png" alt="">
                     </div>
                     <div class="reserve-1">
                         <h1>Take Your Business To The <br> Next Phase</h1>
@@ -140,7 +140,7 @@
                         <p>Matmos International Limited is a private Company <br> incorporated by the Corporate Affair Commission  (CAC) <br> owned by reputable Nigerian Citizen with  high integrity and <br> vast experience in various facets of human endeavor with <br> undiluted passion for service delivery. The company was <br> established  to meet the present and future needs of her <br> clients . </p>  
                     </div>
                     <div>
-                        <img src="../Images/Rectangle 58.png" alt="">
+                        <img src="./Images/Rectangle 58.png" alt="">
                     </div>
                 </div>
             </div>
@@ -152,7 +152,7 @@
                     <p>Matmos International Limited is a private Company <br> incorporated by the Corporate Affair Commission  (CAC) <br> owned by reputable Nigerian Citizen with  high integrity and <br> vast experience in various facets of human endeavor with <br> undiluted passion for service delivery.</p>
                 </div>
                 <div>
-                    <img src="../Images/Rectangle 60.png" alt="">
+                    <img src="./Images/Rectangle 60.png" alt="">
                 </div>
             </div>
         </div>
@@ -164,7 +164,7 @@
             <div class="testimony-1">
                 <div class="you">
                     <div class="mony">
-                        <img src="../Images/Ellipse 17.png" alt="">
+                        <img src="./Images/Ellipse 17.png" alt="">
                     </div>
                     <div class="test">
                         <h2>Ibrahim Adebayo</h2>
@@ -173,7 +173,7 @@
                 </div>
                 <div  class="you">
                     <div class="mony">
-                        <img src="../Images/Ellipse 18.png" alt="">
+                        <img src="./Images/Ellipse 18.png" alt="">
                     </div>
                     <div class="test">
                         <h2>Ibrahim Adebayo</h2>
