--- a/Pages/Contact.html
+++ b/Pages/Contact.html
@@ -16,11 +16,11 @@
             </div>
             <div>
                 <ul>
-                    <a href="./Home.html"><li>Home</li></a>
-                    <a href="./Consultancy.html"><li>Consultancy</li></a>
-                    <a href="./Contract.html"><li>Contract and Supply</li></a>
-                    <a href="./Insurance.html"><li>Insurance</li></a>
-                    <a href="./About.html"><li>About</li></a>
+                    <a href="/Matmos/index.html"><li>Home</li></a>
+                    <a href="../Pages/Consultancy.html"><li>Consultancy</li></a>
+                    <a href="../Pages/Contract.html"><li>Contract and Supply</li></a>
+                    <a href="../Pages/Insurance.html"><li>Insurance</li></a>
+                    <a href="../Pages/About.html"><li>About</li></a>
                 </ul>
                 <div class="toggle">
                     <button>=</button>
@@ -29,11 +29,11 @@
         </nav>
         <div class="mobile-nav">
             <ul>
-                <a href="./Home.html"><li>Home</li></a>
-                <a href="../pages/consultancy.html"><li>Consultancy</li></a>
-                <a href="../pages/Contract.html"><li>Contract and Supply</li></a>
-                <a href="./Insurance.html"><li>Insurance</li></a>
-                <a href="../pages/About.html"><li>About</li></a>
+                <a href="/Matmos/index.html"><li>Home</li></a>
+                <a href="./pages/consultancy.html"><li>Consultancy</li></a>
+                <a href="./pages/Contract.html"><li>Contract and Supply</li></a>
+                <a href="./Pages/Insurance.html"><li>Insurance</li></a>
+                <a href="./pages/About.html"><li>About</li></a>
             </ul>
         </div>
         <div class="contract">
