--- a/Pages/FAQs.html
+++ b/Pages/FAQs.html
@@ -16,13 +16,13 @@
                 <h2>Mamtos <br>International Limited</h2>
             </div>
             <div class="log">
-                <ul>
-                    <a href="./Home.html"><li>Home</li></a>
-                    <a href="./Consultancy.html"><li>Consultancy</li></a>
-                    <a href="./Contract.html"><li>Contract and Supply</li></a>
-                    <a href="./Insurance.html"><li>Insurance</li></a>
-                    <a href="./About.html"><li>About</li></a>
-                </ul>
+              <ul>
+                <a href="/Matmos/index.html"><li>Home</li></a>
+                <a href="../Pages/Consultancy.html"><li>Consultancy</li></a>
+                <a href="../Pages/Contract.html"><li>Contract and Supply</li></a>
+                <a href="../Pages/Insurance.html"><li>Insurance</li></a>
+                <a href="../Pages/About.html"><li>About</li></a>
+            </ul>
                 <div class="toggle">
                     <button>=</button>
                 </div>
@@ -30,11 +30,11 @@
         </nav>
         <div class="mobile-nav">
             <ul>
-                <a href="./Home.html"><li>Home</li></a>
-                <a href="./Consultancy.html"><li>Consultancy</li></a>
-                <a href="./Contract.html"><li>Contract and Supply</li></a>
-                <a href="./Insurance.html"><li>Insurance</li></a>
-                <a href="./About.html"><li>About</li></a>
+                <a href="/Matmos/index.html"><li>Home</li></a>
+                <a href="./Pages/Consultancy.html"><li>Consultancy</li></a>
+                <a href="./Pages/Contract.html"><li>Contract and Supply</li></a>
+                <a href="./Pages/Insurance.html"><li>Insurance</li></a>
+                <a href="./Pages/About.html"><li>About</li></a>
             </ul>
         </div>
         <div class="about">
