--- a/Pages/Plan-details.html
+++ b/Pages/Plan-details.html
@@ -18,11 +18,11 @@
             </div>
             <div class="log">
                 <ul>
-                    <a href="./Home.html"><li>Home</li></a>
-                    <a href="./Consultancy.html"><li>Consultancy</li></a>
-                    <a href="./Contract.html"><li>Contract and Supply</li></a>
-                    <a href="./Insurance.html"><li>Insurance</li></a>
-                    <a href="./About.html"><li>About</li></a>
+                    <a href="/Matmos/index.html"><li>Home</li></a>
+                    <a href="../Pages/Consultancy.html"><li>Consultancy</li></a>
+                    <a href="../Pages/Contract.html"><li>Contract and Supply</li></a>
+                    <a href="../Pages/Insurance.html"><li>Insurance</li></a>
+                    <a href="../Pages/About.html"><li>About</li></a>
                 </ul>
                 <div class="toggle">
                     <button>=</button>
@@ -31,11 +31,11 @@
         </nav>
         <div class="mobile-nav">
             <ul>
-                <a href="./Home.html"><li>Home</li></a>
-                <a href="./Consultancy.html"><li>Consultancy</li></a>
-                <a href="./Contract.html"><li>Contract and Supply</li></a>
-                <a href="./Insurance.html"><li>Insurance</li></a>
-                <a href="./About.html"><li>About</li></a>
+                <a href="/Matmos/index.html"><li>Home</li></a>
+                <a href="./Pages/Consultancy.html"><li>Consultancy</li></a>
+                <a href="./Pages/Contract.html"><li>Contract and Supply</li></a>
+                <a href="./Pages/Insurance.html"><li>Insurance</li></a>
+                <a href="./Pages/About.html"><li>About</li></a>
             </ul>
         </div>
         <div class="about">
