linking of pages

--- a/index.html
+++ b/index.html
@@ -227,6 +227,12 @@
                 <p>&copy;2023-2034 Mamtos International Limited. All Right Reserved.</p>
             </div>
         </div>
+        <!-- <footer>
+            <p class="attribution">
+              Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
+              Coded by <a href="#">Your Name Here</a>.
+            </p>
+          </footer> -->
     </footer>
     <script src="../Js/Main.js"></script>
 </body>
