reducing the padding

--- a/index.html
+++ b/index.html
@@ -137,7 +137,7 @@
                 <div class="reserve-0">
                     <div class="reserve-1">
                         <h1>Rest Assured And See The <br> Differences</h1>
-                        <p>Matmos International Limited is a private Company <br> incorporated by the Corporate Affair Commission  (CAC) <br> owned by reputable Nigerian Citizen with  high integrity and <br> vast experience in various facets of human endeavor with <br> undiluted passion for service delivery. The company was <br> established  to meet the present and future needs of her <br> clients . </p>  
+                        <p>Matmos International Limited is a private Company incorporated by the Corporate Affair Commission  (CAC) owned by reputable Nigerian Citizen with  high integrity and vast experience in various facets of human endeavor with undiluted passion for service delivery. The company was established  to meet the present and future needs of her clients . </p>  
                     </div>
                     <div>
                         <img src="./Images/Rectangle 58.png" alt="">
@@ -149,7 +149,7 @@
             <div class="down-1">
                 <div class="down-2">
                     <h1>Become Heathier And <br> Happier.</h1>
-                    <p>Matmos International Limited is a private Company <br> incorporated by the Corporate Affair Commission  (CAC) <br> owned by reputable Nigerian Citizen with  high integrity and <br> vast experience in various facets of human endeavor with <br> undiluted passion for service delivery.</p>
+                    <p>Matmos International Limited is a private Company incorporated by the Corporate Affair Commission  (CAC) owned by reputable Nigerian Citizen with  high integrity and vast experience in various facets of human endeavor with undiluted passion for service delivery.</p>
                 </div>
                 <div>
                     <img src="./Images/Rectangle 60.png" alt="">
@@ -168,7 +168,7 @@
                     </div>
                     <div class="test">
                         <h2>Ibrahim Adebayo</h2>
-                        <p>Matmos International Limited is a private Company <br> incorporated by the Corporate Affair Commission  (CAC) <br> owned by reputable Nigerian Citizen with  high integrity and <br> vast experience in various facets of human endeavor with <br> undiluted passion for service delivery.</p>
+                        <p>Matmos International Limited is a private Company incorporated by the Corporate Affair Commission  (CAC) owned by reputable Nigerian Citizen with  high integrity and vast experience in various facets of human endeavor with undiluted passion for service delivery.</p>
                     </div>
                 </div>
                 <div  class="you">
@@ -177,7 +177,7 @@
                     </div>
                     <div class="test">
                         <h2>Ibrahim Adebayo</h2>
-                        <p>Matmos International Limited is a private Company <br> incorporated by the Corporate Affair Commission  (CAC) <br> owned by reputable Nigerian Citizen with  high integrity and <br> vast experience in various facets of human endeavor with <br> undiluted passion for service delivery.</p>
+                        <p>Matmos International Limited is a private Company incorporated by the Corporate Affair Commission  (CAC) owned by reputable Nigerian Citizen with  high integrity and  vast experience in various facets of human endeavor with  undiluted passion for service delivery.</p>
 
                     </div>
                 </div>
