updating the nav section

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         <nav>
             <div class="logo">
                 <img src="./Images/Vector.jpg" alt="">
-                <h2>Mamtos <br>International Limited</h2>
+                <h2>Mamtos International Limited</h2>
             </div>
             <div class="log">
                 <ul>
@@ -123,20 +123,20 @@
                     <h2>Mamtos Features</h2>
                 </div>
                 <div>
-                    <h1>Matmos Has Become The Best <br> Consultancy Platform For Busineses.</h1>
+                    <h1>Matmos Has Become The Best Consultancy Platform For Busineses.</h1>
                 </div>
                 <div class="reserve">
                     <div>
                         <img src="./Images/Rectangle 57.png" alt="">
                     </div>
                     <div class="reserve-1">
-                        <h1>Take Your Business To The <br> Next Phase</h1>
-                        <p>Matmos International Limited is a private Company <br> incorporated by the Corporate Affair Commission  (CAC) <br> owned by reputable Nigerian Citizen with  high integrity and <br> vast experience in various facets of human endeavor with <br> undiluted passion for service delivery. The company was <br> established  to meet the present and future needs of her <br> clients . </p>
+                        <h1>Take Your Business To The Next Phase</h1>
+                        <p>Matmos International Limited is a private Company incorporated by the Corporate Affair Commission  (CAC) owned by reputable Nigerian Citizen with  high integrity and vast experience in various facets of human endeavor with undiluted passion for service delivery. The company was established  to meet the present and future needs of her clients . </p>
                     </div>
                 </div>
                 <div class="reserve-0">
                     <div class="reserve-1">
-                        <h1>Rest Assured And See The <br> Differences</h1>
+                        <h1>Rest Assured And See The Differences</h1>
                         <p>Matmos International Limited is a private Company incorporated by the Corporate Affair Commission  (CAC) owned by reputable Nigerian Citizen with  high integrity and vast experience in various facets of human endeavor with undiluted passion for service delivery. The company was established  to meet the present and future needs of her clients . </p>  
                     </div>
                     <div>
