--- a/Pages/Contract.html
+++ b/Pages/Contract.html
@@ -18,10 +18,10 @@
             <div class="log">
                 <ul>
                     <a href="./index.html"><li>Home</li></a>
-                    <a href="../Pages/Consultancy.html"><li>Consultancy</li></a>
-                    <a href="../Pages/Contract.html"><li>Contract and Supply</li></a>
-                    <a href="../Pages/Insurance.html"><li>Insurance</li></a>
-                    <a href="../Pages/About.html"><li>About</li></a>
+                    <a href="./Pages/Consultancy.html"><li>Consultancy</li></a>
+                    <a href="./Pages/Contract.html"><li>Contract and Supply</li></a>
+                    <a href="./Pages/Insurance.html"><li>Insurance</li></a>
+                    <a href="./Pages/About.html"><li>About</li></a>
                 </ul>
                 <div class="toggle">
                     <button>=</button>
