adjusting the logo

--- a/Pages/Plan-details.html
+++ b/Pages/Plan-details.html
@@ -13,8 +13,7 @@
     <section>
         <nav>
             <div class="logo">
-                <img src="../Images/Vector.jpg" alt="">
-                <h2>Mamtos <br>International Limited</h2>
+                <img src="../Images/Logo.png" alt="">
             </div>
             <div class="log">
                 <ul>
