--- a/index.html
+++ b/index.html
@@ -12,8 +12,7 @@
     <section>
         <nav>
             <div class="logo">
-                <img src="./Images/Vector.jpg" alt="">
-                <h2>Mamtos International Limited</h2>
+                <img src="./Images/Logo.png" alt="">
             </div>
             <div class="log">
                 <ul>
@@ -44,9 +43,9 @@
                     <h1>contracts and other services?</h1>
                 </div>
                 <div>
-                    <p>Matmos International Limited is a Private Company that engage in</p>
-                    <p>training for hospital, private and government institutions through </p>
-                    <p>Information and communication  technology</p>
+                    <p>Matmos International Limited is a Private Company that engage in
+                    training for hospital, private and government institutions through 
+                    Information and communication  technology</p>
                 </div>
                 <div class="btn">
                     <div><input type="text" placeholder="Search plans"></div>
@@ -234,6 +233,6 @@
             </p>
           </footer> -->
     </footer>
-    <script src="../Js/Main.js"></script>
+    <script src="./Js/Main.js"></script>
 </body>
 </html>
