--- a/Pages/Contact.html
+++ b/Pages/Contact.html
@@ -11,8 +11,7 @@
     <section>
         <nav>
             <div class="logo">
-                <img src="../matmos/Images/Vector.jpg" alt="">
-                <h2>Mamtos <br>International Limited</h2>
+                <img src="../Images/Logo.png" alt="">
             </div>
             <div>
                 <ul>
