updating the contract page

--- a/Pages/Consultancy.html
+++ b/Pages/Consultancy.html
@@ -39,7 +39,7 @@
         <div class="frontpage">
             <div class="test">
                 <h1>Business Consultancy</h1>
-                <p>Matmos International limited is a Private Company that engage in <br>training for hospital,private and government institutions.</p>      
+                <p>Matmos International limited is a Private Company that engage in training for hospital,private and government institutions.</p>      
             </div>
         </div>
         <div class="center">
