updating consultancy footer

--- a/Pages/Consultancy.html
+++ b/Pages/Consultancy.html
@@ -50,8 +50,8 @@
                         <h1>A Little Introduction About <br>Our Consultancy</h1>
                     </div>
                     <div class="para">
-                        <p>Matmos International Limited is a Private Company incorporated by <br>the Corporate Affair Commission (CAC) owned by reputable <br>Nigerian Citizen with high integrity and vast experience in various <br>facets of human endeavor with undiluted passion for service <br>delivery.The company was established to meet the present and <br>future needs of her clients.</p>
-                        <p>Matmos International Limited is a private Company incorporated by <br>the Corporate Affair Commission (CAC) owned by reputable <br>Nigerian citizen with high integrity and vast experience in various <br>facets of human endeavor with undiluted passion for service <br>delivery. The Company was establised to meet the present and <br>future needs of her clients.</p>
+                        <p>Matmos International Limited is a Private Company incorporated by the Corporate Affair Commission (CAC) owned by reputable Nigerian Citizen with high integrity and vast experience in various facets of human endeavor with undiluted passion for service delivery.The company was established to meet the present and future needs of her clients.</p>
+                        <p>Matmos International Limited is a private Company incorporated by the Corporate Affair Commission (CAC) owned by reputable Nigerian citizen with high integrity and vast experience in various facets of human endeavor with undiluted passion for service delivery. The Company was establised to meet the present and future needs of her clients.</p>
                     </div>
                 </div>
                 <div>
@@ -207,7 +207,7 @@
                         </div>
                         <div class="test-1">
                             <h2>Ibrahim Adebayo</h2>
-                            <p>Matmos International Limited is a private Company <br> incorporated by the Corporate Affair Commission  (CAC) <br> owned by reputable Nigerian Citizen with  high integrity and <br> vast experience in various facets of human endeavor with <br> undiluted passion for service delivery.</p>
+                            <p>Matmos International Limited is a private Company incorporated by the Corporate Affair Commission  (CAC) owned by reputable Nigerian Citizen with  high integrity and vast experience in various facets of human endeavor with undiluted passion for service delivery.</p>
                         </div>
                     </div>
                     <div  class="you">
@@ -216,7 +216,7 @@
                         </div>
                         <div class="test-1">
                             <h2>Ibrahim Adebayo</h2>
-                            <p>Matmos International Limited is a private Company <br> incorporated by the Corporate Affair Commission  (CAC) <br> owned by reputable Nigerian Citizen with  high integrity and <br> vast experience in various facets of human endeavor with <br> undiluted passion for service delivery.</p>
+                            <p>Matmos International Limited is a private Company incorporated by the Corporate Affair Commission  (CAC) owned by reputable Nigerian Citizen with  high integrity and vast experience in various facets of human endeavor with undiluted passion for service delivery.</p>
     
                         </div>
                     </div>
