observing the contract page

--- a/Pages/Contract.html
+++ b/Pages/Contract.html
@@ -231,7 +231,7 @@
                         </div>
                         <div class="test-1">
                             <h2>Ibrahim Adebayo</h2>
-                            <p>Matmos International Limited is a private Company <br> incorporated by the Corporate Affair Commission  (CAC) <br> owned by reputable Nigerian Citizen with  high integrity and <br> vast experience in various facets of human endeavor with <br> undiluted passion for service delivery.</p>
+                            <p>Matmos International Limited is a private Company incorporated by the Corporate Affair Commission  (CAC) owned by reputable Nigerian Citizen with  high integrity and vast experience in various facets of human endeavor with undiluted passion for service delivery.</p>
                         </div>
                     </div>
                     <div  class="you">
@@ -240,7 +240,7 @@
                         </div>
                         <div class="test-1">
                             <h2>Ibrahim Adebayo</h2>
-                            <p>Matmos International Limited is a private Company <br> incorporated by the Corporate Affair Commission  (CAC) <br> owned by reputable Nigerian Citizen with  high integrity and <br> vast experience in various facets of human endeavor with <br> undiluted passion for service delivery.</p>
+                            <p>Matmos International Limited is a private Company incorporated by the Corporate Affair Commission  (CAC) owned by reputable Nigerian Citizen with  high integrity and vast experience in various facets of human endeavor with undiluted passion for service delivery.</p>
     
                         </div>
                     </div>
