working on insurance page

--- a/Pages/Contract.html
+++ b/Pages/Contract.html
@@ -39,7 +39,7 @@
         <div class="frontpage">
             <div class="test">
                 <h1>Contract & Supply <br> Management</h1>
-                <p>Matmos International limited is a Private Company that engage in <br>training for hospital,private and government institutions.</p>      
+                <p>Matmos International limited is a Private Company that engage in training for hospital,private and government institutions.</p>      
             </div>
         </div>
         <div class="center">
@@ -252,9 +252,9 @@
                         <h1>Experience The life Of Been Healthier.</h1>
                     </div>
                     <div class="grade-p">
-                        <p>Matmos International Limited is a private Company incorporated by the Corporate Affair Commission </p>
-                        <p>(CAC) owned by reputable Nigerian Citizen with high integrity and vast experience in various facets o</p>
-                        <p> human endeavor with undiluted passion for service delivery.</p>
+                        <p>Matmos International Limited is a private Company incorporated by the Corporate Affair Commission
+                        (CAC) owned by reputable Nigerian Citizen with high integrity and vast experience in various facets o
+                        human endeavor with undiluted passion for service delivery.</p>
                     </div>
                     <div>
                         <a href="./Contact.html"><button>Contact Us</button></a>
@@ -267,7 +267,7 @@
         <div class="mamtos">
             <div class="text">
                 <h2>Mamtos <br>International Limited</h2>
-                <p>Matmos International Limited is a private <br> Company incorporated by the Corporate <br> Affair Commission  (CAC) owned by <br> reputable Nigerian Citizen with  high <br> integrity and vast experience in various <br> facets of human endeavor with undiluted <br> passion for service delivery.</p>
+                <p>Matmos International Limited is a private Company incorporated by the Corporate Affair Commission  (CAC) owned by reputable Nigerian Citizen with  high integrity and vast experience in various facets of human endeavor with undiluted passion for service delivery.</p>
             </div>
             <div class="list">
                 <h2>Platform</h2>
