--- a/Pages/Insurance.html
+++ b/Pages/Insurance.html
@@ -39,7 +39,7 @@
         <div class="frontpage">
             <div class="test">
                 <h1>Insurance Management</h1>
-                <p>Matmos International limited is a Private Company that engage in <br>training for hospital,private and government institutions.</p>      
+                <p>Matmos International limited is a Private Company that engage in training for hospital,private and government institutions.</p>      
             </div>
         </div>
         <div class="center">
@@ -58,8 +58,8 @@
                         <h1>Take A Deep Insight About <br> The Insurance Management</h1>
                     </div>
                     <div class="para">
-                        <p>Matmos International Limited is a Private Company incorporated by <br>the Corporate Affair Commission (CAC) owned by reputable <br>Nigerian Citizen with high integrity and vast experience in various <br>facets of human endeavor with undiluted passion for service <br>delivery.The company was established to meet the present and <br>future needs of her clients.</p>
-                        <p>Matmos International Limited is a private Company incorporated by <br>the Corporate Affair Commission (CAC) owned by reputable <br>Nigerian citizen with high integrity and vast experience in various <br>facets of human endeavor with undiluted passion for service <br>delivery. The Company was establised to meet the present and <br>future needs of her clients.</p>
+                        <p>Matmos International Limited is a Private Company incorporated by the Corporate Affair Commission (CAC) owned by reputable Nigerian Citizen with high integrity and vast experience in various facets of human endeavor with undiluted passion for service delivery.The company was established to meet the present and future needs of her clients.</p>
+                        <p>Matmos International Limited is a private Company incorporated by the Corporate Affair Commission (CAC) owned by reputable Nigerian citizen with high integrity and vast experience in various facets of human endeavor with undiluted passion for service delivery. The Company was establised to meet the present and future needs of her clients.</p>
                     </div>
                 </div>
             </div>
@@ -216,7 +216,7 @@
             <div class="icons">
                 <div class="monies">
                     <h3>Testimonies</h3>
-                   <h1>Brands Are Trusting Us And Has Choose <br> Matmos As Their Consultancy Platform. </h1>
+                   <h1>Brands Are Trusting Us And Has Choose Matmos As Their Consultancy Platform. </h1>
                 </div>
                 <div class="pics">
                     <div>
@@ -248,7 +248,7 @@
                         </div>
                         <div class="test-1">
                             <h2>Ibrahim Adebayo</h2>
-                            <p>Matmos International Limited is a private Company <br> incorporated by the Corporate Affair Commission  (CAC) <br> owned by reputable Nigerian Citizen with  high integrity and <br> vast experience in various facets of human endeavor with <br> undiluted passion for service delivery.</p>
+                            <p>Matmos International Limited is a private Company incorporated by the Corporate Affair Commission  (CAC) owned by reputable Nigerian Citizen with  high integrity and vast experience in various facets of human endeavor with undiluted passion for service delivery.</p>
                         </div>
                     </div>
                     <div  class="you">
@@ -257,7 +257,7 @@
                         </div>
                         <div class="test-1">
                             <h2>Ibrahim Adebayo</h2>
-                            <p>Matmos International Limited is a private Company <br> incorporated by the Corporate Affair Commission  (CAC) <br> owned by reputable Nigerian Citizen with  high integrity and <br> vast experience in various facets of human endeavor with <br> undiluted passion for service delivery.</p>
+                            <p>Matmos International Limited is a private Company incorporated by the Corporate Affair Commission  (CAC) owned by reputable Nigerian Citizen with  high integrity and vast experience in various facets of human endeavor with undiluted passion for service delivery.</p>
     
                         </div>
                     </div>
@@ -270,8 +270,9 @@
                     </div>
                     <div class="grade-p">
                         <p>Matmos International Limited is a private Company incorporated by the Corporate Affair Commission </p>
-                        <p>(CAC) owned by reputable Nigerian Citizen with high integrity and vast experience in various facets o</p>
-                        <p> human endeavor with undiluted passion for service delivery.</p>
+                          (CAC) owned by reputable Nigerian Citizen with high integrity and vast experience in various facets o</p>
+                          human endeavor with undiluted passion for service delivery.
+                        </p>
                     </div>
                     <div>
                         <a href="./Contact.html"><button>Contact Us</button></a>
@@ -284,7 +285,7 @@
         <div class="mamtos">
             <div class="text">
                 <h2>Mamtos <br>International Limited</h2>
-                <p>Matmos International Limited is a private <br> Company incorporated by the Corporate <br> Affair Commission  (CAC) owned by <br> reputable Nigerian Citizen with  high <br> integrity and vast experience in various <br> facets of human endeavor with undiluted <br> passion for service delivery.</p>
+                <p>Matmos International Limited is a private Company incorporated by the Corporate Affair Commission  (CAC) owned by reputable Nigerian Citizen with  high integrity and vast experience in various facets of human endeavor with undiluted passion for service delivery.</p>
             </div>
             <div class="list">
                 <h2>Platform</h2>
